# ssh-keygen

./: .gitignore  LICENSE  README.md  appgui.py  config.json  keygen.py  main.py  main.spec  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  main.py
src/core/: __init__.py  key_generator.py
src/ssh_keygen/: __init__.py  main.py  utils.py
src/ssh_keygen/ui/: main_window.py
src/ui/: main_window.py
tests/: test_key_generator.py  test_utils.py
