[project]
name = "ssh-keygen"
version = "1.0.0"
description = "A desktop application for generating SSH keys"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Haseeb N", email = "haseeb.kn@outlook.com"}
]
dependencies = [
    "cryptography>=42.0.2",
    "PyQt6>=6.6.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/haseebn19/ssh-keygen"
Repository = "https://github.com/haseebn19/ssh-keygen.git"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/ui/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 65
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
